BFT alignment (#204)
* better logging. bootstrap sampling via successor cuts of ring 0 iteration.

checkpoint assembly gossip of reconfiguration committee members only.

Some general tidying up

* better logging

* set maven opts

* set surefire jvm mem opts

* fix logging, back out some exec/sched changes in routing

* cleanup

* anchor at first checkpoint correctly, filter unknown members

* allow providing the scheduler

* ignore self in gossip, better logging

* no aux populating

* ignore

* rename

* use super majority of observers. some clean up, crisp fpr defaults, etc

Fails on churn test @30 members due to knocking out > 1/4 of the observers.

* fix BFT logic, plus clean up

* double T/O

* use bftSlice for gorgoneion/maat successors

* use SliceIterator for Ethereal.simplify RingCommunications.

* squelch observer logging

* clean up, slice iterator traversal now copy on write array, cleaner Bootstrapper